--- a/style.scss
+++ b/style.scss
@@ -926,6 +926,9 @@ body{
                     margin-top: 35px;
                     font-size: 25px;
                     margin-bottom: 25px;
+                    width: auto;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
             }
             .bas{
@@ -970,6 +973,9 @@ body{
                     margin-top: 35px;
                     font-size: 25px;
                     margin-bottom: 25px;
+                    width: auto;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
             }
             .bas{
