--- a/style.scss
+++ b/style.scss
@@ -740,6 +740,31 @@ body{
 
 //responsive
 
+
+@media screen and (max-width: 2561px){
+    body{
+        .landing{
+            .image{
+                img{
+                    height: 1263px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1441px){
+    body{
+        .landing{
+            .image{
+                img{
+                    height: 700px;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 1025px){
     header{
         height: auto;
