:sparkles: bug responsive

--- a/build.css
+++ b/build.css
@@ -712,6 +712,11 @@ body .prest-chateau .bas .imgbasdroite p {
   text-align: center;
 }
 
+@media screen and (max-width: 1441px) {
+  body .landing .image img {
+    width: 700px;
+  }
+}
 @media screen and (max-width: 1025px) {
   header {
     height: auto;
